Fix cutoff topbar on mobile

--- a/src/main/html/css/pages/index.css
+++ b/src/main/html/css/pages/index.css
@@ -9,24 +9,32 @@ body, html {
 }
 
 .main {
-    width: 100vw;
+    width: 100%;
     height: 100%;
     min-height: 100%;
     box-sizing: border-box;
     overflow-x: hidden;
     overflow-y: hidden;
+    margin: 0px;
+    padding: 0px;
+    display: table;
 }
 
 .topbar {
-    height: 60px;
+    padding: 10px;
+    display: table-row;
+}
+
+.topbar > div {
     border-bottom: solid;
     border-width: thin;
     border-collapse: collapse;
 }
 
 .sidebar {
-    border-style: solid;
-    border-width: thin;
+    border-left: 1px solid;
+    border-right: 1px solid;
+    border-bottom: 1px solid;
     border-collapse: collapse;
     padding-left: 0px;
     padding-right: 0px;
@@ -42,7 +50,16 @@ body, html {
 }
 
 .content-area {
-    height: calc(100% - 60px);
+    display: table-row;
+    height: 100%;
+}
+
+.content-area > div {
+    height: 100%;
+}
+
+.content-area > div > div {
+    height: 100%;
 }
 
 .login-card {
